# bushido_engineering

./: README.md
mcp-phi-base/: .env.example  .gitignore  .gitignore_v2  Cargo.toml  DEPENDENCY_AUDIT_REPORT.md  INFRASTRUCTURE_MAP.md  INFRASTRUCTURE_MAP_v3.md  LOCAL_AI_DEPLOYMENT_GUIDE.md  MCP_SETUP_INSTRUCTIONS.md  MCP_SETUP_INSTRUCTIONS_v2.md  README.md  README_USER.md  README_v2.md  TESTING_GUIDE.md  USAGE_AUDIT_LOG.md  VALIDATION_REPORT.md  health-report.json  package-lock.json  package.json  physics-validator.html  start-phi-discovery.sh  stop-phi-discovery.sh  temp_guide.md  test-results.json  validate-system.sh
mcp-phi-base/docker/: Dockerfile.discovery  Dockerfile.mcp-base  docker-compose.betti.yml  docker-compose.infrastructure.yml  init-db.sql
mcp-phi-base/electron-app/: index.html  main.js  package.json  renderer.js  styles.css
mcp-phi-base/installer/: README.md  install.ps1  install.sh
mcp-phi-base/launcher/: README.md  launcher.py  phi-discovery-launcher.py  requirements.txt
mcp-phi-base/mcp-server/: package-lock.json  package.json  phi-discovery-mcp.js
mcp-phi-base/scripts/: discovery-node.js  get-validated-equations.js  init-swarm.sh  package-app.sh  validation-node.js
mcp-phi-base/src/: lib.rs
mcp-phi-base/tests/: README.md  health-monitor.js  test-runner.js
mcp-phi-base/validators/: betti-fibonacci-validator.js
mcp-phi-base/visualizers/: phi-mcp-visual-organizer.md  topological-proof-theater.js
mcp-phi-base/web-interface/: INTEGRATED_PHYSICS_LEARNING_README.md  PHYSICS_VALIDATOR_README.md  README.md  betti-visual-component.js  (+10 more)
(+9 files in other folders)
