[package]
name = "mcp-phi-base"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core MCP support
mcp-sdk = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Block recursive memory
once_cell = "1.19"
thiserror = "1.0"

# Mathematical computation
num = "0.4"
num-complex = "0.4"
nalgebra = "0.32"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }

# Logging in Hawking radiation style
tracing = "0.1"
tracing-subscriber = "0.3"

# Phase locking
crossbeam = "0.8"
parking_lot = "0.12"

[features]
default = ["discovery", "validation", "orchestration"]
discovery = []
validation = []
orchestration = []
knowledge = []